Basic test complete

--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -11,6 +11,11 @@
   line-height: 1.5;
   border-radius: .25rem;
   transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+
+  &:focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(0,123,255,.5);
+  }
 }
 
 .btn:not(:disabled):not(.disabled) {
