--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,5 +1,7 @@
 @import 'config';
 @import 'mixins';
 @import 'forms';
+@import 'tables';
 @import 'buttons';
+@import 'animations';
 @import 'global';
